feat(ui-state-management): Enable replay button when TTS audio and evaluation data are available
- Add conditional logic to enable replay button after cooldown period
- Check for both hasTTSAudio and hasEvaluationData flags before enabling
- Allow users to replay evaluation sessions only when both audio and data exist
- Improves UX by preventing replay attempts with incomplete session data

--- a/public/index.html
+++ b/public/index.html
@@ -1389,6 +1389,9 @@
         inCooldown = false;
         cooldownTimer = null;
         enable(dom.btnStart);
+        if (hasTTSAudio && hasEvaluationData) {
+          enable(dom.btnReplay);
+        }
         dom.statusText.textContent = STATUS_TEXT[SessionState.IDLE];
       }, COOLDOWN_MS);
     }
